--- a/_config.yml
+++ b/_config.yml
@@ -243,7 +243,8 @@ exclude:
   - package.json
   - package-lock.json
   - _pages/about_einstein.md
-  - _pages/blog.md
+  #- _pages/blog.md
+  - _pages/projects.md
   - purgecss.config.js
   - README.md
   - readme_preview/
