--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ middle_name:
 last_name: Szachniewicz
 email: michal.szachniewicz@maths.ox.ac.uk
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Research website of Michał Szachniewicz.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
+keywords: mathematics, model theory, algebraic geometry, Arakelov geometry # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ♜ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
